--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "2.4.3",
     "express": "^4.17.0",
     "express-session": "^1.17.0",
+    "jquery": "^3.4.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
